# udemy_courses

./: .gitignore
django_travel_agency_website/: pyproject.toml
django_travel_agency_website/src/django_travel_agency_website/market_prj/market_prj/: settings.py
django_travel_agency_website/tests/: test_django_travel_agency_website.py
olegrev_framework/: pyproject.toml
olegrev_framework/src/: run.py  urls.py  views.py
olegrev_framework/src/olegrev_framework/: framework_requests.py  main.py  templator.py
olegrev_framework/src/templates/: index.html
olegrev_framework/tests/: test_olegrev_framework.py
tgbot_goods_store/: README.rst  pyproject.toml
tgbot_goods_store/src/: telbot.py
tgbot_goods_store/src/data_base/: dbalchemy.py  dbcore.py
tgbot_goods_store/src/handlers/: handler.py  handler_all_text.py  handler_com.py  handler_inline_query.py  handler_main.py
tgbot_goods_store/src/markup/: markup.py
tgbot_goods_store/src/models/: category.py  order.py  product.py
tgbot_goods_store/src/settings/: config.py  message.py  products.db  utility.py
tgbot_goods_store/tests/: test_tgbot_goods_store.py
