[tool.poetry]
name = "olegrev_framework"
version = "0.1.0"
description = ""
authors = ["Glukharev Oleg Anatolyevich <olegglukharev92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
